# api/swagger.json
@@ -50,7 +50,52 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ListResponse-github_com_orray-proj_orray_pkg_rest_dto_Canvas"
+                            "$ref": "#/definitions/ListResponse-Canvas"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a new canvas with the given display name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Canvas"
+                ],
+                "summary": "Create a new canvas",
+                "operationId": "CreateCanvasV1alpha1",
+                "parameters": [
+                    {
+                        "description": "Canvas data",
+                        "name": "canvas",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateCanvasRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/Canvas"
                         }
                     },
                     "400": {
@@ -88,6 +133,21 @@
                 }
             }
         },
+        "CreateCanvasRequest": {
+            "type": "object",
+            "required": [
+                "displayName",
+                "name"
+            ],
+            "properties": {
+                "displayName": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "ErrorResponse": {
             "type": "object",
             "properties": {
@@ -108,7 +168,7 @@
                 }
             }
         },
-        "ListResponse-github_com_orray-proj_orray_pkg_rest_dto_Canvas": {
+        "ListResponse-Canvas": {
             "type": "object",
             "properties": {
                 "items": {
