# pkg/rest/dto/canvas.go
@@ -2,6 +2,12 @@ package dto
 
 import "github.com/orray-proj/orray/api/v1alpha1"
 
+// CreateCanvasRequest is the request body for creating a canvas.
+type CreateCanvasRequest struct {
+	Name        string `json:"name" binding:"required"`
+	DisplayName string `json:"displayName" binding:"required"`
+}
+
 // Canvas is a minimal wrapper around the spec from the v1alpha1 api
 type Canvas struct {
 	v1alpha1.CanvasSpec
